frontend_tests/negative/assignment_type/cmd/app/main.go
package main

func main() { var value int; value = "wrong"; _ = value }
